@@ -9,6 +9,9 @@ DIST genpatches-4.1-7.extras.tar.xz 16180 SHA256 39569583e833ff338b8126a52ae46a9
 DIST genpatches-4.9-15.base.tar.xz 306680 SHA256 0d21f36e5dada40a98ff345ebc01678d2aee060becc7c5c1df84edec9279af2a SHA512 2962f30bd055a5afcefe8aca654419da52c61fc8e5ee8a16770020f517467ad13e4d7ba47c0b1b531b0e4be630b4ca2cf78170544d5ac0115db7071cc504278b WHIRLPOOL 77f667264615abd7a7324abf60bcc2177421595130103d1af79a438da907fb2d274048f51e2f5ae66d80b27a8b1ba732c0653fa48d58bfff338c815cef3b68eb
 DIST genpatches-4.9-15.experimental.tar.xz 105620 SHA256 95e2425fe639048d06d9695c34cc4e74222e29b08fe1e5e4673e746d6f5ad8d4 SHA512 f708e6247ea3cfdcdcf2e4c80ddf65722ca078a10a545d21172d46ce0e9021e3f6cd382c85aa8bd219d1da1c69de6be21c41d8c2250ad0fda1e21e8ae2964577 WHIRLPOOL 8272693cd4e3a95bc731f035c0d2002761d8446f3fe21ae217c9ba83d127f4da4d0b072ca89fe8e7068540b4e55671f5acf288779dbff79542a590505802a64c
 DIST genpatches-4.9-15.extras.tar.xz 17328 SHA256 7d65754bb7e17d006462d0575a954c48d5ce98ad5ca370cb7f227ba7e711cda0 SHA512 4b4e61cb350716fe0e111ee81309de985e7a4442e7fce0268b50a8a02bddc63a904fd148dee8f1258c1df393324236cc75f823c4708f10a74863cdaf5c28d56e WHIRLPOOL 849be987dc4a07fc7161ae52e2c996ad6dc4c8395e1559f41df508b6b95b60df00a50a3a252adc17d003a0630a580869d36661bef1dfd3186e7977f5900aa445
+DIST genpatches-4.9-18.base.tar.xz 385508 SHA256 d29fc16842e846c2c6487e9c1543e6fe43429d34882ac9c6ca070c1fe3564605 SHA512 c1d08b3d66df74efe610cbf586921f7caa57bb8337848380fdc8e2034883180a60a26dab9ded50974fb468d35dc923912ead08cb0f751a515cef85efb31955d9 WHIRLPOOL e1ef981b945718eab2e96470f96a033cc2b1ede6c706d6cd3e32f4f1c4e066766135141d55a5ccee06d9fb84bc66df389cdb2d095ad569bd565afc600b3b4095
+DIST genpatches-4.9-18.experimental.tar.xz 105616 SHA256 209be56c1efb0ba3fbee17f2437bd00b36caecc6c44db2b4e1a0e46ae17640b0 SHA512 37d6983f46ed4031f11f91ffcdacb510b40cab682d71ac471ab3c2ae78598ee9826068afb8b1388d96133635ba2680cc106624e0d79c341d2610b4f74330b773 WHIRLPOOL 5af9422c0526c5e23977f2d25ea683ed1ecf6f9e14a6daf52490bd808e9790cf6f6d9ef96353bda3474197eb954159575a4f0e6a768a86777d9b8a61828d0a0e
+DIST genpatches-4.9-18.extras.tar.xz 17348 SHA256 64167f17f122f969476bf68a3e0493a77d7ae9e78087c2748cdfdc6e6186af2a SHA512 dcbdea379a0e28e9b8ed08b32ee71a36ce9ccc817e5b79f38759031e3324441f3e91e6b7e2802d1a694574bb4ce9e8f441d88ccbbd9280b3a4456eadab7d5fec WHIRLPOOL 1d3ba61d03d17a707a65423e85f7f3a235a9d39fb26e4602b5cf663e097dc9e8618380d7a54db60705e6b38e9c0674330df57a6e243c7215411275a489ab8b42
 DIST gentoo-b2-kernel-patches-4.1.3-r1.tar.gz 17364 SHA256 03554f9440ede9a1601c6adfbc4ec6a5d18f016cddac96e2bb120c7f847ed7ff SHA512 b6e5315b2327410fae8a37f300c17a6604a8026cba774667d8f49d36ffb185896dd6235bf2b695d8954b1e8fc3a7fecdd1d69b9df1d6651051c249af2a7dab44 WHIRLPOOL be9ba2a87be4be5b10ede7d5363e18ddedec197773a7c41b7c2ed1cb4fab007c9b2145a9acea2d3bd7d1208181c6b6e4fb506801e1ab4896c929e30dce2bae56
 DIST gentoo-b2-kernel-patches-4.1.3.tar.gz 17379 SHA256 4511097c26d7f16192d8dda8592567137801535f4a7fcd743ebf9969dc2d45ed SHA512 ed0ea76e4dcbdbff664e85fc723c6fdfcaefa6eba565e5477d08aef060f2d14d4f2410108c2048e009836020dafcfbc03e5f870dc8150b6156d32d11d0565366 WHIRLPOOL bbc27775b19883428a6fee117f2bb17931eafa8a11dcfe68bc35c04f81c328f7d3627657628afde1b5a5fc57406cc057e17d6fe626ba66ef4ca595d684e9d97e
 DIST gentoo-b2-kernel-patches-4.9.13.tar.gz 16399 SHA256 ff81497304c7552b3266dc76f2f9db7d5486bf0d78eeb0b394ccdd91a4c50309 SHA512 3762dfb8ead0a4d7402b27a5ea31ec0d27086e720f0c6cf61c1d8e6de2b5392c869f660c2e8d8bfc50c05c3a9ef2e4e53ea609aa6ecc29dbfa54aadf0527bcb8 WHIRLPOOL 081d450b9799d5f2f2cd35a1a9aff99bcc9f6bb1b4c5482976c1ea161c7992f8b113c47e62a95750d91f67a749214a0bb9c8425182e131708e1cc958eff527b9
@@ -17,21 +20,22 @@ DIST linux-4.9.tar.xz 93192404 SHA256 029098dcffab74875e086ae970e3828456838da6e0
 EBUILD gentoo-b2-sources-4.1.3-r1.ebuild 1283 SHA256 7bf0bd8db81cbaf0b70b3f0c0f9b5b2b90997d6cbb7777074f1ffb1bb1901bd2 SHA512 d5e4c0892dff80566e8997c32dfe3039c700ff5f0effea4885e6645c006479b20b3b4ac5182ca213a0fdf73715753ea6b8a95b43e5749af09ce80c36715c643c WHIRLPOOL cdf41ac69e51a8ab88403f0abe47ea4d7bfc460e8bbeaf792c245ea4746956eff8e815a2a2357fa1d001801d54ccf40f1b62a304fc836e3408545d741ac6a525
 EBUILD gentoo-b2-sources-4.1.3.ebuild 1281 SHA256 2b94edcf1c0bbbbe58d5dd6fb02dcfe9cdbf5cf9167fbb5d5e7405b81d95f522 SHA512 360795a0733ec557fc11f754cb2873577644a5a0637db0b990e883f37669ba3b0e767a27bdadd4eb15cea7555541f6a120c361f06bd5dffe40e1371bd60f1ccb WHIRLPOOL 26992bc7ead1d216326dbfcd7608bfa36f2b3f9832b72c047df2f21e5b58b7d5260944e4bb0ffeefd568e706a9f38cb78f961cfbc6a66588741f86dde06985a8
 EBUILD gentoo-b2-sources-4.9.13.ebuild 1270 SHA256 09a8d3eeb63119ebb0647b1b835bb37eb926b2490a1dfd8356d7b8a28c31c857 SHA512 3d4418f2e733019da0f7af75de6590f1e242f23509f3e24ad69fac6fd8be43a1d59d4292a609c4f7ac6ce0e555eb588b25a5e5f5173be14fb9e6f5ba2b28b2c0 WHIRLPOOL 171731833506e7916dcad8558d604de6edf53efe5749b1ac4839bbffaf102e3bb4ced76116f15f90f558412dd89439af67dae568771c6a9358d98c81f2eaf55c
-MISC ChangeLog 1208 SHA256 c6e0df0afd44e323459f11fccb2a33a5bfd36deece76b1137413fcc4f2583383 SHA512 719ebdac13d0ec88c9226baefd7dcf355131cf1dbc96353960cc2c2f86865e8804dd38c2ff5523a2433dd6dd756adc6bf8ad5f8a397adcec23a1506c69bf0bd4 WHIRLPOOL d175da60a69710f6a6e2278caeae1d94b5626ef870b15fb6113203bc9e596c34467f00c98582d5d73ff531325441e07c6b05d07477b92832a5221b0d985622f9
+EBUILD gentoo-b2-sources-4.9.16.ebuild 1270 SHA256 6e0eb58a52bc0391d06bcbeb64ec8459991094c08269b2524e40dc3d20d8dde1 SHA512 bed2e890d9f2597a8d8418aa268543da1f07f29e02506b96e5a4a3790eec8dfb6f24dca217494090624ca731b85805454fe92cca3f03557005b4101f3f5628e7 WHIRLPOOL 8b9c99bb285c26da3b6a5ab86da7f56239e0aa1635cb436f255223ba21fe629f427a31eef58aae84d2d4bc608f1050ed4f76325c53a0c68b7805b0775e06057f
+MISC ChangeLog 1359 SHA256 7f5ff19b190aa3cead4a5131b1e4c6a650c99688977d34dd8faba0e67e8e64cf SHA512 617e71c547f2e5ce51ddb27f3c8ec5c62af10fe471dedcfccf67b84a7264b0abdcf4e7b2d548f38b7b4179a062350670131893b12164a40e712f5ee31efa1ba9 WHIRLPOOL c0c264fed456628001debafeef4811d388d3e8f0522156a2417bca3474bfd1f4409c3699b712007fb849459d8b3e6353d6812c351f934171ff966893ad92c053
 MISC metadata.xml 791 SHA256 1f659a2b4a3e3d3b16715c76abc7c4a7f056c406e2787e2f9053fae150239859 SHA512 f5e77f85ee6ce465f001cf4756c9d7976122b4895c66c92103eb855d8bf2e918e66102c64317e68599f7c77b737bcf1f4f695d44deaa389ef0926408733725b7 WHIRLPOOL ddf30598116f6e116fc017ce323e25b58c5cfca96d5d58aebd482b6cda86a8993730123947f13b2ef289c538435f3daeb24df6404d302cdb5b0459291dab69a3
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEQSCyFISndkdGWDkJMcgNst3nbOoFAljQVmMACgkQMcgNst3n
-bOpj6hAAkMywI2IfFir5HMPIkbNzjH6hOci+S1EhS9dc/TbsanxSSDblKzudIRKK
-UAhZsEv/8nI45m6Sxi9G1ahW+TPgJUCjCV5mTN2m1U9vsGhBGpv7wdHG9xcrbs6a
-A7og+R5yE7rYNUBKj5EmMhCzoFSF4rWHKhtGJWEpoHX9ZuoWnBLj2/kMbVgCuI6j
-2UlAiUjCzXUn7hlnfpGEhAG2cshg0gnfw0S2eD7uvdvL5WJHjHJfP0hTvi1Hq0zJ
-pCEdVM/jGXEvGXxt4gImcRaHwm9xqfCZX3wTPm/r24K4/UyuHbtNcUPdCG/tkd7Y
-YjNcVempE7qSTThoDtKAL8kTJs207dGO9IrmxixsuDfbWhawwKnjKIUTYbTLBRJY
-NseP0CqrLfWC8g9mI2C6l550mUpZg0QRlaoys8eW35dNTeCpCdw5lv9Xbv1F4WVp
-WAtpA6IdyA24fziXNucHGWJzHdn6n2nU+TC/safurTinGb4qJWgAb4LvHe7FxmHo
-OA6+tRfih+zG8C2I7sjn2h4L9hx1tKG1FruunBf6PQKeTrwGMfaC5a1TFx3NGvUx
-J8zskb1VSDFwReFgzgFBJ7cnOcRDh2HsR0vEOsE578IRqP6QfFNhhLbcg0MOwZbX
-GbsPcVjQFIQEqlJqQwBWFf5RMHE1fK0yGc3vkSPAWvJjYjfu+vQ=
-=uV7u
+iQIzBAEBCAAdFiEEQSCyFISndkdGWDkJMcgNst3nbOoFAljQW68ACgkQMcgNst3n
+bOrZFA/7BsP8fNAKMnqVLsxoZQ7FFTVUbOqeAQLKN9Z36K504w5XXZ81SZAjI6nl
+GGt5vb+2/swaNzg7pYR1Rbf19jHqVDL1jjBllgLmK7SnmMtcjwRjisoGIQ0HxzRG
+rN60uRAPTSDJ84rlqtiMQUrOcdNtBHzeAhpaCxRX9u8e3FOORM0gG7BbFPk5TxuP
+u4X7Ujvl8IRpjVz9WLu6oFdBgsmVYzXRzSceb776X/OYy4IKw/z6ah5wfuamcXip
+sbKx55ofYfU/j79GaXvu9QlOlaZkUp5GoRSxSpEUjt/eQoqF4u/oV6Mp6Q3rN/wY
+KG4CKSdjBwSdYLJMUAvgIznJz7Y8p6mz+Y6NNOwLXfVSwscFExIu+QV3sjsRWFoc
+QUEIo5m1cd441qJIIjmVwdgoxekmPOgXZeFJ7+K5cERZGj52dcR2woL75HsJ+JUZ
+gFIxAulxPBDNdEOB2lxhGWfm3hNGD/CuvzgUpI97hakzg3sPM5GYT5tGN3H7Cyl0
+9sOgQOYQ9xtMIJQtsk24z0B+RjIDpcDFatj9AzkUyH2OvrNDncnZiKrr8/SodQyO
+COzOBp0FpMCmZjMnb6W/ZFc6s/PEVOCA5fIWqRMbB/nVraq61V+0PvTpjl1hby4W
+vCboiplNnuVTPF6nAqgnXG7/06Jt/8pmnky5u7GR1gnHBGkHp+Q=
+=C5K7
 -----END PGP SIGNATURE-----
