@@ -2,6 +2,11 @@
 # Copyright 1999-2017 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*gentoo-b2-sources-4.9.16 (20 Mar 2017)
+
+  20 Mar 2017; sakaki <sakaki@gentoo.org> +gentoo-b2-sources-4.9.16.ebuild:
+  Update for 4.9.16 kernel (LTS)
+
 *gentoo-b2-sources-4.9.13 (20 Mar 2017)
 
   20 Mar 2017; sakaki <sakaki@gentoo.org> +gentoo-b2-sources-4.9.13.ebuild:
